--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "sensio/framework-extra-bundle": "^5.1",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
@@ -11,10 +13,12 @@
         "symfony/maker-bundle": "^1.2",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
+        "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "sensiolabs/security-checker": "^4.1",
         "symfony/dotenv": "^4.0"
     },
     "config": {
@@ -42,7 +46,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -56,8 +61,8 @@
     },
     "extra": {
         "symfony": {
-            "id": "",
-            "allow-contrib": false
+            "id": "01C9KBVBETHG1X87Y1XRK1FFFM",
+            "allow-contrib": "true"
         },
         "symfony.id": "01C8HXVNVXJ7GVR2WW3QE5KT22"
     }
