--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,11 +14,18 @@ security:
             security: false
         main:
             pattern: ^/
-            http_basic: ~
+            anonymous: ~
+            form_login:
+                login_path: login
+                check_path: login
             provider: classic
         
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
+        - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/subscribe, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: ROLE_USER }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
