--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -18,6 +18,7 @@ security:
             form_login:
                 login_path: login
                 check_path: login
+                csrf_token_generator: security.csrf.token_manager
             provider: classic
         
     # Easy way to control access for large sections of your site
