--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -29,5 +29,6 @@ security:
         - { path: ^/info, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/subscribe, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: ROLE_USER }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
