--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,9 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    web:
+        class: App\Service\WebService
+        public: true
+    App\Service\WebService: '@web'
+    
